--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@babel/eslint-parser": "^7.23.3",
     "@babel/preset-env": "^7.23.9",
     "@github/local-action": "^2.2.1",
+    "@types/node": "^24.5.2",
     "@vercel/ncc": "^0.38.1",
     "babel-preset-jest": "^29.6.3",
     "eslint": "^8.56.0",
@@ -85,6 +86,7 @@
     "eslint-plugin-jest": "^27.6.0",
     "jest": "^29.7.0",
     "make-coverage-badge": "^1.2.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "typescript": "^5.9.2"
   }
 }
