--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -9,6 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     name: AI Code Review
     
+    permissions:
+      pull-requests: write
+      contents: read
+      
     steps:
     - name: Checkout
       uses: actions/checkout@v4
